Fix hero link and label spacing

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -19,27 +19,25 @@
 }
 
 @mixin underlined-link($color: var(--link-color)) {
-    a {
-        position: relative;
-        text-decoration: none;
-        border: none;
+    position: relative;
+    text-decoration: none;
+    border: none;
+    @include transition;
+
+    &::after {
+        content: '';
+        height: 3px;
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        width: 0%;
+        background-color: $color;
         @include transition;
+    }
 
-        &::after {
-            content: '';
-            height: 3px;
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-            width: 0%;
-            background-color: $color;
-            @include transition;
-        }
-
-        &:hover::after {
-            width: 100%; 
-            left: 0;
-        }
+    &:hover::after {
+        width: 100%; 
+        left: 0;
     }
 }
 
