--- a/_sass/general/general.scss
+++ b/_sass/general/general.scss
@@ -149,7 +149,9 @@ hr {
 }
 
 p, ul, ol, figcaption {
-    @include underlined-link;
+    a {
+        @include underlined-link;
+    }
 }
 
 #error {
