--- a/_sass/general/themes.scss
+++ b/_sass/general/themes.scss
@@ -41,6 +41,7 @@ html.night {
     //--nav-bg-color: #1F1F1F;
     --nav-bg-color: #2c2c2c;
     --hero-bg-color: #121212;
+    //--hero-bg-color: black;
     --selection-bg-color: #{$secondary-color-selection};
 
     --text-color-normal: #9e9e9e;
@@ -60,7 +61,7 @@ html.night {
     --collapsible-text-hover-color: #141414;
 
     --card-bg-color: #2e2e2e;
-    --label-bg-color: #484747;
+    --label-bg-color: #53514b;
     --hover-color-general: #313131;
 
     --form-bg-color: #313131;
